| Bug #17095 | Cluster RBR in circle does not terminate | ||
|---|---|---|---|
| Submitted: | 3 Feb 2006 10:27 | Modified: | 24 Apr 2007 4:50 |
| Reporter: | Tomas Ulin | ||
| Status: | Closed | ||
| Category: | Server: ClusterRep | Severity: | S3 (Non-critical) |
| Version: | 5.1.6 | OS: | Any |
| Assigned to: | Tomas Ulin | Target Version: | |
[3 Feb 2006 10:27]
Tomas Ulin
[16 Mar 2006 10:30]
Tomas Ulin
please document as a limitation in 5.1
[7 Apr 2006 10:06]
Jon Stephens
Thank you for your bug report. This issue has been addressed in the documentation. The updated documentation will appear on our website shortly, and will be included in the next release of the relevant product(s). Additional info: Documented in 5.1 Manual / Cluster Limitations. Closed.
[3 Apr 2007 12:43]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/23644 ChangeSet@1.2542, 2007-04-03 12:57:18+02:00, tomas@whalegate.ndb.mysql.com +22 -0 Bug #17095 Cluster RBR in circle does not terminate - add any value to ndb - use it to update correct server id in binlog thread
[3 Apr 2007 17:22]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/23687 ChangeSet@1.2545, 2007-04-03 17:36:05+02:00, tomas@whalegate.ndb.mysql.com +1 -0 Bug#17095 Cluster RBR in circle does not terminate - set correct server id
[7 Apr 2007 9:00]
Bugs System
Pushed into 5.1.18-beta
[12 Apr 2007 15:58]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/24386 ChangeSet@1.2554, 2007-04-12 16:13:49+02:00, tomas@whalegate.ndb.mysql.com +4 -0 Bug#17095 circular replication for ndb - test case - reset server id in injector
[13 Apr 2007 12:03]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/24469 ChangeSet@1.2561, 2007-04-13 12:03:01+02:00, mats@romeo.(none) +1 -0 BUG#17095 (Cluster RBR in circle does not terminate): Updating result files with wrong server id for BEGIN and COMMIT events.
[18 Apr 2007 15:43]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/24775 ChangeSet@1.2562, 2007-04-18 15:58:30+02:00, tomas@whalegate.ndb.mysql.com +1 -0 Bug#17095 circular replication - make sure any value is set for linked operations as well, e.g. blob tables
[20 Apr 2007 19:16]
Bugs System
Pushed into 5.1.18-beta
[24 Apr 2007 4:50]
Jon Stephens
Thank you for your bug report. This issue has been committed to our source repository of
that product and will be incorporated into the next release.
If necessary, you can access the source repository and build the latest available
version, including the bug fix. More information about accessing the source trees is
available at
http://dev.mysql.com/doc/en/installing-source.html
Documented bugfix in 5.1.18 changelog, changed category to ClusterRep.
See also Bug #25688.
