Bug #17095 Cluster RBR in circle does not terminate - add any value to ndb - use it to update correct server id in binlog thread